# pommel-horse-aesthetics-mcp

./: README.md  pyproject.toml
src/pommel_horse_aesthetics_mcp/: __main__.py  server.py
src/pommel_horse_aesthetics_mcp/taxonomies/: __init__.py  element_groups.py  form_assessment.py  spatial_zones.py  temporal_qualities.py
