[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pommel-horse-aesthetics-mcp"
version = "0.1.0"
description = "MCP server for pommel horse aesthetic analysis"
authors = [{name = "Dal", email = "dal@lushy.ai"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pommel_horse_aesthetics_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
